<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Preferences">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:alpha="0.2"
        android:src="@drawable/preferencesicon" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.3"
        android:background="#15151e" />

    <TextView
        android:id="@+id/preferences_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/length_of_forecast"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/preferences_lengthforecast"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preferences_time"
        android:layout_centerHorizontal="true"
        android:ems="1"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preferences_lengthforecast"
        android:layout_centerHorizontal="true"
        android:text="@string/hours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/start_forecast"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/preferences_startWhen"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/preferences_lengthforecast"
        android:layout_alignStart="@+id/preferences_lengthforecast"
        android:layout_below="@+id/textView4"
        android:ems="1"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/preferences_startWhen"
        android:text="@string/hours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/inPref"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/genderChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/choiceMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:alpha="0.7"
            android:background="#a6a6a6"
            android:checked="false"
            android:gravity="center"
            android:text="@string/male"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/choiceFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:alpha="0.7"
            android:background="#a6a6a6"
            android:checked="false"
            android:gravity="center"
            android:text="@string/female"
            android:textSize="14sp" />
    </RadioGroup>

    <Button
        android:id="@+id/preferences_applyButton"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/apply" />

</RelativeLayout>
