<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SuggestionActivity">

    <ImageView
        android:id="@+id/bgweather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:alpha="0.35"
        android:scaleType="centerCrop"
        android:src="@drawable/bgweather" />

    <ImageView
        android:id="@+id/whattowearbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bgweather"
        android:alpha="0.35"
        android:scaleType="fitXY"
        android:src="@drawable/whattowearbg" />

    <ImageView
        android:id="@+id/forecast_ice_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="@drawable/ice"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/forecast_rain_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rainy"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/forecast_snow_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/snow"
        android:alpha="0.8"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.3"
        android:background="#15151e" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bgweather"
        android:background="@color/colorAccent" />

    <View
        android:id="@+id/view"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_below="@+id/forecast_image"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent" />

    <ImageView
        android:id="@+id/forecast_humidity_image"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/forecast_cloudiness_image"
        android:layout_alignLeft="@+id/forecast_temperature_image"
        android:layout_alignStart="@+id/forecast_temperature_image"
        android:alpha="0.8"
        android:background="@drawable/humidity" />

    <ImageView
        android:id="@+id/forecast_windspeed_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast_description_old"
        android:layout_alignEnd="@+id/forecast_cloudiness_image"
        android:layout_alignLeft="@+id/forecast_cloudiness_image"
        android:layout_alignRight="@+id/forecast_cloudiness_image"
        android:layout_alignStart="@+id/forecast_cloudiness_image"
        android:layout_alignTop="@+id/textView05"
        android:alpha="0.80"
        android:background="@drawable/wind" />

    <ImageView
        android:id="@+id/forecast_temperature_image"
        android:layout_width="35dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/forecast_image"
        android:layout_toEndOf="@+id/textView03"
        android:layout_toRightOf="@+id/textView03"
        android:alpha="0.80"
        android:background="@drawable/temperature" />

    <ImageView
        android:id="@+id/forecast_cloudiness_image"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView09"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:alpha="0.80"
        android:background="@drawable/cloudiness" />

    <TextView
        android:id="@+id/download_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progress"
        android:layout_centerHorizontal="true"
        android:text="@string/downloading"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/forecast_preferences"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/forecast_windspeed_image"
        android:layout_alignRight="@+id/forecast_windspeed_image"
        android:layout_alignTop="@+id/forecast_duration"
        android:alpha="0.8"
        android:background="@drawable/preferences" />

    <Button
        android:id="@+id/forecast_checkweatherbutton"
        android:layout_width="112dp"
        android:layout_height="140dp"
        android:layout_below="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:alpha="0.8"
        android:background="@drawable/checkweatherbutton"
        android:gravity="center"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/download_data"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="95dp"
        android:layout_toEndOf="@+id/download_data"
        android:layout_toRightOf="@+id/download_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/forecast_preferences"
        android:layout_alignRight="@+id/forecast_preferences"
        android:layout_alignTop="@+id/textView03"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="70dp"
        android:gravity="center"
        android:textColor="#FF000000"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/forecast_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView03"
        android:layout_toEndOf="@+id/forecast_temperature_image"
        android:layout_toRightOf="@+id/forecast_temperature_image"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forecast_windspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView07"
        android:layout_alignLeft="@+id/forecast_cloudiness"
        android:layout_alignStart="@+id/forecast_cloudiness"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forecast_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView07"
        android:layout_toEndOf="@+id/forecast_humidity_image"
        android:layout_toRightOf="@+id/forecast_humidity_image"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forecast_cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/forecast_cloudiness_image"
        android:layout_alignStart="@+id/forecast_cloudiness_image"
        android:layout_below="@+id/textView07"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forecast_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/download_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/x_hour_forecast"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forecast_duration"
        android:layout_centerHorizontal="true"
        android:text="@string/for_city"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView02"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forecast_temperature"
        android:layout_marginTop="36dp"
        android:layout_toLeftOf="@+id/forecast_duration"
        android:layout_toStartOf="@+id/forecast_duration"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast_cloudiness"
        android:layout_alignEnd="@+id/textView05"
        android:layout_alignRight="@+id/textView05"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <ImageView
        android:id="@+id/forecast_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/forecast_cloudiness_image"
        android:layout_below="@+id/forecast_city"
        android:layout_centerHorizontal="true"
        android:scaleType="fitStart"
        android:src="@drawable/ow09d"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/forecast_description_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/forecast_image"
        android:layout_alignEnd="@+id/forecast_image"
        android:layout_alignLeft="@+id/forecast_image"
        android:layout_alignRight="@+id/forecast_image"
        android:layout_alignStart="@+id/forecast_image"
        android:gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/forecast_feelslike_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast_temperature"
        android:layout_alignLeft="@+id/forecast_temperature"
        android:layout_alignStart="@+id/forecast_temperature"
        android:text="@string/feels_like"
        android:textSize="11sp" />

    <Button
        android:id="@+id/forecast_weathernow_button"
        android:layout_width="114dp"
        android:layout_height="25dp"
        android:layout_above="@+id/view2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/weathernow" />

</RelativeLayout>
